fix whitespace for price cells

--- a/app/assets/stylesheets/office_clerk.css.scss
+++ b/app/assets/stylesheets/office_clerk.css.scss
@@ -202,3 +202,7 @@ thead, tbody {  vertical-align: top;
 .no-border td {
   border: none;
 }
+
+table .price , .inventory {
+  white-space: nowrap;
+}
